--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,50 @@
     transform: rotate(360deg);
   }
 }
+:root {
+  /*fonts*/
+  --catamaran-font: 'Catamaran', sans-serif;
+  --mulish-font: 'Mulish', sans-serif;
+  /*colors*/
+  --primary-color: #f11010;
+  --secondary-color: #256b3e;
+  --body-bg-color: #fdfcfc;
+  --border-color: #555555;
+  --success-color: #4f8a10;
+  --error-color: #d8000c;
+  --info-color: #31708f;
+  --just-white: #ffffff;
+}
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+html,
+body {
+  font-family: var(--mulish-font);
+}
+
+body {
+  background-color: var(--body-bg-color);
+  color: var(--just-white);
+}
+
+button {
+  border: none;
+  background: none;
+}
+
+.button-primary {
+  background-color: var(--primary-color);
+  border: none;
+  font-family: var(--mulish-font);
+  font-weight: 700;
+  font-size: 1rem;
+  margin: 20px auto;
+  width: 112px;
+  height: 36px;
+  cursor: pointer;
+}
