--- a/src/App.css
+++ b/src/App.css
@@ -43,12 +43,12 @@
   /*colors*/
   --primary-color: #f11010;
   --secondary-color: #256b3e;
-  --body-bg-color: #fdfcfc;
+  --body-bg-color: #ffffff;
   --border-color: #555555;
   --success-color: #4f8a10;
   --error-color: #d8000c;
   --info-color: #31708f;
-  --just-white: #ffffff;
+  --just-white: #040a05;
 }
 
 * {
